--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -22,5 +22,27 @@
     "permissionErrorMessage": "Taukeet needs location permission to fetch the current location, with current location Taukeet calculates the prayer times.",
     
     "cancel": "Cancel",
-    "openSettings": "Open settings"
+    "openSettings": "Open settings",
+
+    "loading": "Loading...",
+
+    "settings": "Settings",
+    "fetchLocationDesc": "tap to get the current location",
+    "changeMadhabDesc": "tap to change the madhab",
+    "changeCalculationMethodDesc": "tap to change the calculation method",
+    "changeLattitudeSetting": "In locations at higher latitude, twilight may persist throughout the night during some months of the year. In these abnormal periods, the determination of Fajr and Isha is not possible using the usual formulas, to overcome this problem, several solutions have been proposed, tap to change the method.",
+    "prayerSdjustments": "Prayer adjustments",
+    "changeAdjustmentsDesc": "Adjust the prayer times by minutes",
+
+    "fajr": "Fajr",
+    "sunrise": "Sunrise",
+    "dhuhr": "Dhuhr",
+    "asr": "Asr",
+    "maghrib": "Maghrib",
+    "isha": "Isha",
+
+    "reset": "Reset",
+    "saveAdjustments": "Save adjustments",
+    "adjustmentsSuccess": "Adjustments saved successfully",
+    "adjustmentsResetSuccess": "Adjustments reset successfully"
 }
