add language change functionality and localization support

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -33,6 +33,7 @@
     "changeLattitudeSetting": "In locations at higher latitude, twilight may persist throughout the night during some months of the year. In these abnormal periods, the determination of Fajr and Isha is not possible using the usual formulas, to overcome this problem, several solutions have been proposed, tap to change the method.",
     "prayerSdjustments": "Prayer adjustments",
     "changeAdjustmentsDesc": "Adjust the prayer times by minutes",
+    "changeLanguage": "Change language",
 
     "fajr": "Fajr",
     "sunrise": "Sunrise",
