--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -45,5 +45,62 @@
     "reset": "Reset",
     "saveAdjustments": "Save adjustments",
     "adjustmentsSuccess": "Adjustments saved successfully",
-    "adjustmentsResetSuccess": "Adjustments reset successfully"
+    "adjustmentsResetSuccess": "Adjustments reset successfully",
+
+    "muslimWorldLeague": "Muslim World League",
+    "muslimWorldLeagueDesc": "Muslim World League (MWL) method, usually used in Europe, Far East, and parts of America. Default in most calculators.",
+
+    "egyptian": "Egyptian",
+    "egyptianDesc": "Egyptian General Authority of Survey method, commonly used in Egypt.",
+
+    "karachi": "Karachi",
+    "karachiDesc": "University of Islamic Sciences, Karachi method, widely used in Karachi, Pakistan.",
+
+    "ummAlQura": "Umm al-Qura",
+    "ummAlQuraDesc": "Umm al-Qura University, Makkah method, utilized in Makkah, Saudi Arabia.",
+
+    "dubai": "Dubai",
+    "dubaiDesc": "Dubai method, specific to Dubai, United Arab Emirates.",
+
+    "moonsightingCommittee": "Moonsighting Committee",
+    "moonsightingCommitteeDesc": "Moonsighting Committee method, based on moonsighting observations.",
+
+    "northAmerica": "North America",
+    "northAmericaDesc": "Islamic Society of North America (ISNA) method, commonly used in North America.",
+
+    "kuwait": "Kuwait",
+    "kuwaitDesc": "Kuwait method, commonly used in Kuwait.",
+
+    "qatar": "Qatar",
+    "qatarDesc": "Qatar method, specific to Qatar.",
+
+    "singapore": "Singapore",
+    "singaporeDesc": "Singapore method, specific to Singapore.",
+
+    "turkey": "Turkey",
+    "turkeyDesc": "Turkey method, specific to Turkey.",
+
+    "tehran": "Tehran",
+    "tehranDesc": "Tehran method, specific to Tehran.",
+
+    "other": "Other",
+    "otherDesc": "Other or generic calculation method with no specific parameters.",
+    
+    "none": "None",
+    "noneDesc": "No special latitude adjustment is applied.",
+
+    "middleOfTheNight": "Middle of the Night",
+    "middleOfTheNightDesc": "Fajr will never be earlier than the middle of the night and Isha will never be later than the middle of the night.",
+
+    "seventhOfTheNight": "Seventh of the Night",
+    "seventhOfTheNightDesc": "Fajr will never be earlier than the beginning of the last seventh of the night and Isha will never be later than the end of the first seventh of the night.",
+
+    "twilightAngle": "Twilight Angle",
+    "twilightAngleDesc": "Similar to Seventh of the Night, but instead of 1/7, the fraction of the night used is fajrAngle/60 and ishaAngle/60.",
+
+    "hanafi": "Hanfi",
+    "hanafiDesc": "Later Asr Time",
+
+    "shafi": "Standard",
+    "shafiDesc": "Malki, Shafi, Hanbali - Earlier Asr Time"
 }
