--- a/lib/l10n/intl_ur.arb
+++ b/lib/l10n/intl_ur.arb
@@ -106,5 +106,9 @@
 
     "chooseLanguage": "زبان منتخب کریں",
     "chooseLanguageDesc": "ایپ کے لیے اپنی پسندیدہ زبان منتخب کریں",
-    "chooseLanguageBtn": "منتخب کریں"
+    "chooseLanguageBtn": "منتخب کریں",
+
+    "previous": "پچھلا",
+    "next": "آگے", 
+    "done": "مکمل"
 }
