feat: add Qiblah page and integrate it into the navigation with localization support

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -111,5 +111,6 @@
   "previous": "السابق",
   "next": "التالي", 
   "done": "تم",
-  "home": "الرئيسية"
+  "home": "الرئيسية",
+  "qiblah": "القبلة"
 }
