--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -111,5 +111,6 @@
     "previous": "Previous",
     "next": "Next", 
     "done": "Done",
-    "home": "Home"
+    "home": "Home",
+    "qiblah": "Qiblah"
 }
