--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -100,5 +100,6 @@
     "previous": "पिछला",
     "next": "आगे", 
     "done": "पूर्ण",
-    "home": "होम"
+    "home": "होम",
+    "qiblah": "क़िबला"
 }
