--- a/lib/l10n/intl_ur.arb
+++ b/lib/l10n/intl_ur.arb
@@ -111,5 +111,6 @@
     "previous": "پچھلا",
     "next": "آگے", 
     "done": "مکمل",
-    "home": "ہوم"
+    "home": "ہوم",
+    "qiblah": "قبلہ"
 }
