Feature/qiblah direction (#10)
* feat: add Qiblah page and integrate it into the navigation with localization support

* feat: implement Qiblah provider with location fetching and state management

* Add Qiblah direction feature with compass visualization

- Implemented GetQiblahDirection use case to calculate Qiblah direction based on latitude and longitude.
- Created QiblahCompass widget to display the compass and Qiblah direction.
- Added calibration warning dialog for compass reliability.
- Enhanced angle calculations for accurate Qiblah direction indication.
- Included visual indicators for Qiblah facing status and compass accuracy.
- Added assets for compass background and needle.

* feat: enhance Qiblah page layout and location handling with improved error management

* Add Qiblah-related localization strings and update tests

- Introduced new localization strings for Qiblah features in English, Arabic, Hindi, and Urdu.
- Updated the localization files (.arb) to include translations for Qiblah direction, calibration instructions, and related messages.
- Enhanced the localization classes to implement the new strings.
- Added tests for coordinates and location entities, ensuring proper functionality and equality checks.
- Cleaned up test files by removing unnecessary blank lines and ensuring consistent formatting.
- Updated the test runner script to maintain code style and readability.

* refactor: overhaul localization generation and update all language message files.

* Add unit tests for GetQiblahDirection use case with various scenarios

* test: add comprehensive tests for QiblahNotifier including initialization and error handling

* test: add extensive widget tests for QiblahCompass including edge cases and visual validation

* test: add comprehensive tests for QiblahPage including rendering, state management, and edge cases

* test: update address coordinates in tests to reflect new location in Delhi, India

* fix: adjust spacing and improve visual elemen

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -111,5 +111,31 @@
   "previous": "السابق",
   "next": "التالي", 
   "done": "تم",
-  "home": "الرئيسية"
+  "home": "الرئيسية",
+  "qiblah": "القبلة",
+
+  "qiblahCurrentLocation": "الموقع الحالي",
+  "qiblahLatLong": "خط العرض: {lat}، خط الطول: {long}",
+  "qiblahLocationNotSet": "الموقع غير محدد",
+  "qiblahUpdateLocation": "تحديث الموقع",
+  "qiblahCalculating": "جاري حساب اتجاه القبلة ...",
+  "qiblahDirectionHere": "سيتم عرض اتجاه القبلة هنا",
+
+  "qiblahCompassCalibration": "معايرة البوصلة",
+  "qiblahCompassCalibrationMessage": "تحتاج بوصلتك إلى المعايرة للحصول على اتجاه القبلة الدقيق.",
+  "qiblahCompassHowToCalibrate": "كيفية المعايرة:",
+  "qiblahCompassCalibrationStep1": "١. امسك هاتفك بقوة",
+  "qiblahCompassCalibrationStep2": "٢. حركه في الهواء على شكل رقم 8",
+  "qiblahCompassCalibrationStep3": "٣. كرر لمدة 10-15 ثانية",
+  "qiblahCompassCalibrationStep4": "٤. جرب اتجاهات مختلفة",
+  "qiblahCompassCalibrationTip": "للحصول على دقة أفضل ، ابتعد عن الأجسام المعدنية والأجهزة الإلكترونية.",
+  "qiblahCompassCalibrationLater": "سأحاول لاحقًا",
+  "qiblahCompassCalibrationGotIt": "فهمت!",
+  "qiblahCompassDirection": "اتجاه القبلة: {direction}°",
+  "qiblahCompassFacingQiblah": "مواجه القبلة",
+  "qiblahCompassTurnToFindQiblah": "استدر للعثور على القبلة",
+  "qiblahCompassCurrentHeading": "الاتجاه الحالي: {heading}°",
+  "qiblahCompassQiblahDirection": "اتجاه القبلة: {direction}°",
+  "qiblahCompassDifference": "الفرق: {difference}°",
+  "qiblahCompassAccuracy": "دقة البوصلة: {accuracy}"
 }
